Fix overflowing login form
The login form overflowed on small display, causing the browser to add a
horizontal scroll bar in order to see the whole form. Ugly!

--- a/frontend-service/src/authentication/LoginForm.scss
+++ b/frontend-service/src/authentication/LoginForm.scss
@@ -16,16 +16,14 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 10px;
-}
 
-.credentials-fields div {
-  display: grid;
-  gap: 10px;
+  & input {
+    width: 100%;
+  }
 }
 
 .form-control {
   box-sizing: border-box;
-  display: block;
   height: calc(1.5em + .75rem + 2px);
   padding: .375rem .75rem;
   font-size: 1rem;
