--- a/frontend-service/src/style.scss
+++ b/frontend-service/src/style.scss
@@ -336,4 +336,5 @@ main {
   @extend %navbar-pushed;
   @extend %padding-to-footer;
   grid-area: main;
+  max-width: 100vw;
 }
